Fixed minor bug where login snackbar was being hidden behind the footer

--- a/styles/main.css
+++ b/styles/main.css
@@ -212,6 +212,10 @@ main, #messages-card {
   margin-right: 5px;
 }
 
+#must-signin-snackbar {
+  bottom: 88px;
+}
+
 .mdl-mini-footer {
   justify-content: center;
 }
